logging/kibana-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-logging
  namespace: kube-system
  labels:
    k8s-app: kibana-logging
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kibana-logging
  template:
    metadata:
      labels:
        k8s-app: kibana-logging
      annotations:
        seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
    spec:
      containers:
      - name: kibana-logging
        image: docker.elastic.co/kibana/kibana-oss:7.2.0
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
        # livenessProbe:
        #   httpGet:
        #     path: /api/status
        #     port: ui
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /api/status
        #     port: ui
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 10
