logging/kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/auth-realm: Authentication Required - monitoring
    # nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # nginx.ingress.kubernetes.io/auth-type: basic
  name: kibana-logging
  namespace: kube-system
spec:
  rules:
    - host: kibana.io
      http:
        paths:
        - path: /
          backend:
            serviceName: kibana-logging
            servicePort: 5601
